--- a/src/styles/blocks/todoapp.scss
+++ b/src/styles/blocks/todoapp.scss
@@ -7,6 +7,7 @@
     text-align: center;
     font-size: 100px;
     font-weight: 100;
+    line-height: 150px;
     color: $titleColor;
     -webkit-text-rendering: optimizeLegibility;
     -moz-text-rendering: optimizeLegibility;
